# picoquic

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .tmp.dprobes.h  .travis.yml  CMakeLists.txt  CMakeSettings.json  Dockerfile  LICENSE  README.md  SECURITY.md  UpgradeLog.htm  appveyor.yml  implementation-notes.txt  picoquic-config.cmake.in  picoquic.sln  socket_loop.md  valgrind_out.txt
.github/workflows/: ci-asan-ubsan.yml  ci-embedding.yml  ci-tests-aegis.yml  ci-tests-clang.yml  ci-tests-io_uring.yml  ci-tests-mac-os.yml  ci-tests-no-fusion.yml  ci-tests-no-openssl.yml  ci-tests-select.yml  ci-tests.yml  ci-thread-check.yml  codeql-analysis.yml  mbedtls.yml  webtransport-browser.yml
PerfAndStressTest/: PerfAndStressTest.cpp  PerfAndStressTest.vcxproj  PerfAndStressTest.vcxproj.filters
Release/: UnitTest1.exp  UnitTest1.iobj  UnitTest1.ipdb  picoquicfirst.iobj  picoquicfirst.ipdb
SVC/: README.md  ca-cert.pem  receiver.cpp  server-key.pem
UnitTest1/: UnitTest1.vcxproj  UnitTest1.vcxproj.filters  unittest1.cpp
baton_app/: baton_app.c  baton_app.vcxproj  baton_app.vcxproj.filters
certs/: badcert.pem  esni-secp256r1.key
certs/ech/: ech_config.txt  ech_rr.txt  private.pem  public.pem
certs/mtls_ed25519/: ca.crt  client.crt  client.key  server.crt  server.key
certs/tests/: cert.pem  fullchain.pem
ci/: build_cppcheck.sh  build_picoquic.ps1  build_picotls.ps1  build_picotls.sh  build_xcodessl.sh  picotls-win32.patch
ci/embedding-test/: run.sh
ci/embedding-test/install_test/: CMakeLists.txt  main.c  main_http.c
ci/embedding-test/sample_lib/: CMakeLists.txt  sample_lib-config.cmake.in  sample_lib.c  sample_lib.h
cmake/: FindMbedTLS.cmake  FindPTLS.cmake  Findaegis.cmake
doc/: QLOG.md  architecture.md  building_picoquic.md  ech-esni.md  h3zero_url_template.c  howto_use_external_event_manager.md  managing-memory-copies.md  memory.md  multi-alpn-support.md  p2p.md  parallel.md  pico_webtransport.md  picomask.md  quicperf.md  sample.md  send_receive_data.md  socket_loop.md  usage.md  webtransport_conformance.md  without_openssl.md
loglib/: auto_memlog.h  autoqlog.c  autoqlog.h  cidset.c  cidset.h  csv.c  csv.h  logconvert.c  logconvert.h  loglib.vcxproj  loglib.vcxproj.filters  logreader.c  logreader.h  logwriter.c  memory_log.c  picoquic_qlog.h  picoquic_qlog_fns.h  qlog.c  qlog.h  qlog_fns.c  qlog_frames.c  svg.c  svg.h  txtlog.c
mp1/: Makefile
mp1/src/: client.c  http_client.cpp  (+3 more)
multicast_sample/: README.md  multicast.c  multicast_background.c  multicast_client.c  multicast_server.c  picoquic_multicast.h
p_sim/: p_sim.vcxproj  p_sim.vcxproj.filters  pico_sim.c
performance_measurement/: README.md
picohttp/: democlient.c  democlient.h  demoserver.c  demoserver.h  h09_common.c  h09_common.h  h09_server.c  h09_server.h  h3zero.c  h3zero.h  h3zero_client.c  h3zero_common.c  h3zero_common.h  h3zero_server.c  h3zero_uri.c  h3zero_uri.h  h3zero_url_template.c  h3zero_url_template.h  pico_webtransport.h  picohttp.vcxproj  picohttp.vcxproj.filters  picomask.c  picomask.h  picoquic_ns.c  picoquic_ns.h  picowt.h  quicperf.c  quicperf.h  siduck.c  siduck.h  webtransport.c  wt_baton.c  wt_baton.h  wt_h09.c  wt_h09.h
picohttp_t/: picohttp_t.c  picohttp_t.vcxproj  picohttp_t.vcxproj.filters
picohttptest/: h3zerotest.c  http0dot9test.c  picohttptest.h  picohttptest.vcxproj  picohttptest.vcxproj.filters
picolog/: picolog.c  picolog.filters  picolog.vcxproj  picolog.vcxproj.filters
picoqinq/: picoqinq.vcxproj  picoqinq.vcxproj.filters  qinqclient.c  qinqclient.h  qinqproto.c  qinqproto.h  qinqserver.c  qinqserver.h
picoqinq_t/: picoqinq_t.c  picoqinq_t.vcxproj  picoqinq_t.vcxproj.filters
picoquic/: ReadMe.txt  bbr.c  bbr1.c  bytestream.c  bytestream.h  c4.c  cc_common.c  cc_common.h  cidset.h  config.c  cubic.c  democlient.c  democlient.h  demoserver.c  demoserver.h  ech.c  error_names.c  fastcc.c  flexicast.c  fnv1a.c  fnv1a.h  frame_names.c  frames.c  gsosockloop.c  h3zero.c  h3zero.h  http0dot9.c  hybla.c  intformat.c  logger.c  logwriter.c  logwriter.h  loss_recovery.c  mbedtls_sign.inc  newreno.c  pacing.c  packet.c  packet_names.c  parse_util.c  paths.c  (+74 more)
picoquic_c2csv_t/: picoquic_c2csv_t.c  picoquic_c2csv_t.vcxproj  picoquic_c2csv_t.vcxproj.filters
picoquic_mbedtls/: ptls_mbedtls.c  ptls_mbedtls.h  ptls_mbedtls_sign.c  ptls_mbedtls_verify.c
picoquic_t/: http09_1234.txt  http09_12345.html  http09_index2.html  log_test.txt  log_tp_fuzz_test.txt  log_tp_test.txt  picoquic_t.c  picoquic_t.vcxproj  picoquic_t.vcxproj.filters
picoquicclitest/: picoquicclitest.vcxproj  picoquicclitest.vcxproj.filters
picoquicfirst/: getopt.c  getopt.h  index.html  picoquicdemo.c  picoquicdemo_fc.c  picoquicfirst.c  picoquicfirst.vcxproj  picoquicfirst.vcxproj.filters
picoquictest/: CnxCreationTest.c  ReadMe.txt  StreamZeroFrameTest.c  ack_frequency_test.c  ack_of_ack_test.c  add_block_test.c  aegis_perf.c  app_limited.c  app_msg_overflow_ref.qlog  binlog_ref.qlog  bytestream_test.c  cc_compete_test.c  cert_verify_test.c  cleartext_aead_test.c  cnx_creation_test.c  cnxstress.c  code_version_test.c  config_test.c  config_usage_ref.txt  congestion_test.c  cplusplus.cpp  cpu_limited.c  crypto_api_test.c  crypto_api_test.h  datagram_tests.c  delay_tolerant_test.c  dualq_aqm.c  dualq_aqm_test.c  ech_test.c  edge_cases.c  file_test_ref.txt  float16test.c  flow_control_test.c  fnv1atest.c  getter_test.c  h3zero_stream_test.c  h3zero_uri_test.c  h3zerotest.c  hashtest.c  high_latency_test.c  (+73 more)
pqbench_app/: pqbench.c  pqbench_app.vcxproj  pqbench_app.vcxproj.filters
quicwind/: 100000  Resource.h  quicwind.aps  quicwind.cpp  quicwind.h  quicwind.rc  quicwind.vcxproj  quicwind.vcxproj.filters  quicwind_proc.c
sample/: README.md  picoquic_sample.h  picoquic_sample_fc.h  sample.c  sample.vcxproj  sample.vcxproj.filters  sample_background.c  sample_client.c  sample_fc_client.c  sample_server.c
scripts/: coverage.sh  getlog.pl
thread_tester/: thread_test.c  thread_tester.vcxproj  thread_tester.vcxproj.filters
toy_app/: README.md  client.cpp  server.cpp
(+43 files in other folders)
